# activities

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  build.rs
app/: Cargo.toml
app/migrations/activities/: 001_init.sql  002_add_rpe.sql  003_add_workout_type.sql  004_add_nutrition.sql  005_add_feedback.sql  006_timeseries_metric_table.sql  007_duplicate_t_activities.sql  008_timeseries_metric_table_v2.sql  009_add_duration_to_t_activities_v2.sql
app/migrations/auth/auth_links/: 001_init.sql
app/migrations/auth/magic_links/: 001_init.sql
app/migrations/auth/sessions/: 001_init.sql
app/migrations/auth/users/: 001_init.sql
app/migrations/preferences/: 001_init.sql
app/migrations/training/: 001_init.sql  002_add_t_training_period.sql  003_add_metric_definition_group_by.sql  004_add_metric_value_group.sql  005_add_training_notes.sql  006_add_training_note_title.sql  007_add_training_note_date.sql  008_remove_t_training_metrics_values.sql  009_add_metric_name.sql  010_add_metric_training_period.sql  011_add_metrics_ordering.sql  012_add_new_metric_source_to_metric_definitions.sql  013_add_fk_to_t_training_metrics_definitions.sql  014_add_training_metric_summary_col.sql
app/resources/: 471434016566837749.fit  471451235896033386.fit  471496544042910001.fit  471550588690137492.fit  471589691420868609.fit  471731337294807142.fit  471775761752162507.fit  471798900613742594.fit
app/src/: config.rs  lib.rs  main.rs
app/src/bootstrap/: demo.rs  mod.rs  multi_user.rs  single_user.rs
app/src/domain/: models.rs  ports.rs  services.rs
app/src/domain/models/: activity.rs  mod.rs  preferences.rs  training.rs  training_metrics.rs
app/src/domain/ports/: activity.rs  mod.rs  preferences.rs  training.rs
app/src/domain/services/: activity.rs  mod.rs  preferences.rs  training.rs  training_metrics.rs
app/src/inbound/: mod.rs
app/src/inbound/auth/: infra.rs  mod.rs
app/src/inbound/auth/email_based/: auth_link.rs  mod.rs  session.rs  user.rs
app/src/inbound/auth/email_based/infra/: mod.rs
app/src/inbound/auth/no_auth/: mod.rs
app/src/inbound/auth/single_password/: mod.rs
app/src/inbound/http/: mod.rs
app/src/inbound/http/auth/: infra.rs  mod.rs  service.rs
app/src/inbound/http/auth/email_based/: auth_link.rs  mod.rs  session.rs  user.rs
app/src/inbound/http/auth/infra/: mailer.rs  memory.rs  mod.rs  sqlite.rs
app/src/inbound/http/auth/services/: auth_link.rs  magic_link.rs  mod.rs  session.rs  user.rs
app/src/inbound/http/handlers/: create_activity.rs  create_training_metric.rs  create_training_note.rs  create_training_period.rs  delete_activity.rs  delete_training_metric.rs  delete_training_note.rs  delete_training_period.rs  get_activity.rs  get_training_metrics.rs  get_training_note.rs  get_training_notes.rs  get_training_period.rs  get_training_periods.rs  list_activities.rs  login_user.rs  mod.rs  patch_activity.rs  register_user.rs  types.rs  update_training_note.rs  update_training_period.rs  upload_activity.rs  validate_login.rs
app/src/inbound/http/handlers/activities/: activity_schema.rs  create_standalone_activity.rs  delete_activity.rs  get_activity.rs  get_all_activities.rs  get_raw.rs  list_activities.rs  mod.rs  patch_activity.rs  upload_activity.rs
app/src/inbound/http/handlers/auth/: login_user.rs  mod.rs  register_user.rs  validate_login.rs
app/src/inbound/http/handlers/preferences/: delete_preference.rs  get_all_preferences.rs  get_preference.rs  mod.rs  set_preference.rs  types.rs
app/src/inbound/http/handlers/training/: compute_training_metric_values.rs  copy_training_metric.rs  create_training_metric.rs  create_training_note.rs  mod.rs  (+19 more)
app/src/inbound/http/middlewares/: rate_limit.rs
app/src/inbound/parser/: fit.rs  json.rs  mod.rs  tcx.rs  test.fit  test.tcx
app/src/outbound/: fs.rs  memory.rs  mod.rs
app/src/outbound/sqlite/: activity.rs  mod.rs  preferences.rs  training.rs  training_metrics.rs  types.rs
fit-parser/: Cargo.toml
fit-parser/examples/: find_specific_fields.rs  print_messages.rs
fit-parser/src/: lib.rs  utils.rs
fit-parser/src/parser/: header.rs  mod.rs  records.rs
fit-parser/src/parser/definition/: custom.rs
fit-parser/src/parser/types/: generated.rs  mod.rs
(+285 files in other folders)
