[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros", "multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.1"
derive_more = { version = "2.0.1", features = ["full"] }
email_address = "0.2.9"
fit-parser = { path = "../fit-parser", features = [] }
handlebars = "6.3.2"
lettre = { version = "0.11.18", features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls",
    "ring",
    "rustls-platform-verifier",
], default-features = false }
rand = "0.9.2"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "sqlite", "chrono"] }
subtle = "2.6.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
axum-test = "18.1.0"
mockall = "0.13.1"
tempfile = "3.23.0"

[features]
demo = []
single-user = []
multi-user = []
